[gd_scene load_steps=4 format=3 uid="uid://djra87ar5vdie"]

[ext_resource type="Script" uid="uid://cmsrkf871u48v" path="res://Scenes/Main/MainUI/team_menu.gd" id="1_cfobx"]
[ext_resource type="PackedScene" uid="uid://boblaywavsmta" path="res://Scenes/Main/MainUI/add_beastie_ui.tscn" id="2_pr7q6"]
[ext_resource type="Theme" uid="uid://bkrlwg21fhprn" path="res://Autoloads/Resources/Themes/edit_button.tres" id="3_68ssv"]

[node name="TeamMenu" type="ScrollContainer"]
custom_minimum_size = Vector2(805, 1494)
script = ExtResource("1_cfobx")

[node name="MainContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 36
alignment = 1

[node name="MemberOneSlotUI" parent="MainContainer" instance=ExtResource("2_pr7q6")]
unique_name_in_owner = true
layout_mode = 2
text = "Member One"

[node name="MemberTwoSlotUI" parent="MainContainer" instance=ExtResource("2_pr7q6")]
unique_name_in_owner = true
layout_mode = 2
text = "Member Two"
pos = 2

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("3_68ssv")

[node name="BenchOneUI" parent="MainContainer" instance=ExtResource("2_pr7q6")]
unique_name_in_owner = true
layout_mode = 2
text = "Bench One"
pos = 4

[node name="BenchTwoUI" parent="MainContainer" instance=ExtResource("2_pr7q6")]
unique_name_in_owner = true
layout_mode = 2
text = "Bench Two"
pos = 5
